# hazlo

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ETHICAL-USE.md  LICENSE  README.md  alembic.ini  docker-compose.yml  mise.toml  package-lock.json  package.json  pyproject.toml
.agents/: AGENTS.md  testing-agent.md
.agents/skills/hazlo/: SKILL.md
.agents/skills/ingesta-eventos-madrid/: SKILL.md
.agents/skills/prefect-orchestration-python/: SKILL.md
.agents/skills/pydantic-ai-llm/: SKILL.md
.agents/skills/scraping-qcrawl-justhtml/: SKILL.md
.agents/skills/tech-committee/: SKILL.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs-health.yml  release.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_indexes.py  003_add_source_config.py  004_phase1_llm.py  005_composite_index.py  006_price_cents_and_llm_micros.py  007_add_idempotency_key.py  008_add_raw_text_fields.py  009_add_is_expired.py  0f980c683d88_initial_schema.py  a246cedfffec_add_content_hash_to_events.py
docker/: entrypoint.sh  init-db.sh  prefect_init.py  worker-entrypoint.sh
docs/: agentic-system.md  ai-context.md  web-parsing-research.md
hazlo/: main.py  settings.py
hazlo/application/services/: __init__.py  dedup_service.py  enrichment_service.py  llm_enrichment_service.py  quality_classifier.py  review_engine.py  source_health_service.py
hazlo/application/use_cases/: create_event_from_source.py  ingest_source.py  review_event.py
hazlo/domain/: circuit_breaker.py  event.py  llm_output.py  llm_provider.py  review.py  source.py  source_health.py
hazlo/infrastructure/: crypto.py
hazlo/infrastructure/adapters/: __init__.py  base.py  email_adapter.py  mock_adapter.py  rss_adapter.py  web_adapter.py
hazlo/infrastructure/api/: deps.py  schemas.py
hazlo/infrastructure/api/routes/: admin_events.py  admin_llm_providers.py  admin_sources.py
hazlo/infrastructure/db/: models.py  repositories.py  session.py
hazlo/infrastructure/llm/: __init__.py  client.py  factory.py  prompts.py
hazlo/infrastructure/llm/agents/: __init__.py  date_parser.py  location_enrichment.py  quality_classifier.py
hazlo/infrastructure/llm/providers/: __init__.py  base.py  gemini.py  openrouter.py
hazlo/infrastructure/prefect/: deployments.py  flows.py  source_deployment_manager.py
hazlo/infrastructure/templates/: base.html
hazlo/infrastructure/templates/admin/events/: _audit_trail.html  _event_card.html  _event_detail.html  list.html
hazlo/static/css/: input.css
scripts/: release.sh  setup-prefect.sh
tests/: test_main.py
tests/api/: conftest.py  test_admin_events.py  test_admin_events_detail.py  test_admin_llm_providers.py  test_admin_sources.py  test_htmx_shell_navigation.py
tests/application/: test_dedup_service.py  test_enrichment_service.py  test_flow_wiring.py  test_ingest_source.py  test_ingest_source_content_hash.py  test_llm_enrichment_service.py  test_review_engine.py  test_review_event.py  test_source_health_service.py
tests/domain/: test_circuit_breaker.py  test_content_hash.py  test_event.py  test_idempotency_key.py  test_llm_output.py  test_source_type.py
tests/infrastructure/: test_crypto.py  test_event_repo_content_hash.py  test_event_repository.py  test_list_models_providers.py  test_llm_factory.py  test_llm_provider_dict.py  test_llm_provider_repository.py  test_mock_adapter.py  test_review_repository.py  test_rss_adapter.py  test_source_deployment_manager.py
tests/infrastructure/llm/: test_circuit_breaker_integration.py  test_factory.py
tests/infrastructure/llm/agents/: test_date_parser.py  test_location_enrichment.py  test_quality_classifier.py
tests/integration/: conftest.py  test_content_hash_integration.py  test_prefect_e2e.py
(+14 files in other folders)
