[project]
name = "hazlo"
dynamic = ["version"]
description = "Smart event agenda with human review and source administration panel"
requires-python = ">=3.13"
readme = "README.md"
license = { text = "HSEL-1.0" }

dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "jinja2>=3.1.0",
    "prefect>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "factory-boy>=3.3.0",
    "testcontainers[postgres]>=4.8.0",
    "ruff>=0.8.0",
    "ty>=0.0.37",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hazlo"]

[tool.hatch.version]
path = "hazlo/__init__.py"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF", "S"]
ignore = ["B008", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ty.environment]
python = ".venv/bin/python"

[tool.ty.src]
exclude = ["alembic"]

[tool.ty.analysis]
allowed-unresolved-imports = ["pytest_asyncio", "testcontainers.*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
